--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 boilerpipe = { version = "0.6.0", optional = true }
+comfy-table = "7.1.3"
 htmd = { version = "0.1.6", optional = true }
 html2md-rs = { version = "0.10.2", optional = true }
 html2text = { version = "0.13.5", optional = true }
