--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ html2md-rs = { version = "0.10.2", optional = true }
 html2text = { version = "0.13.5", optional = true }
 llm_readability = { version = "0.0.11", optional = true }
 mdka = { version = "1.2.10", optional = true }
+memory-stats = "1.2.0"
 nanohtml2text = { version = "0.2.1", optional = true }
 readability = { version = "0.3.0", optional = true }
 readable-readability = { version = "0.4.0", optional = true }
