--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+allocation-counter = "0.8.1"
 boilerpipe = { version = "0.6.0", optional = true }
 comfy-table = "7.1.3"
-dhat = { version = "0.3.3", optional = true }
 htmd = { version = "0.1.6", optional = true }
 html2md-rs = { version = "0.10.2", optional = true }
 html2text = { version = "0.13.5", optional = true }
@@ -30,7 +30,6 @@ default = [
     "readability",
     "readable-readability",
 ]
-track-memory = ["dep:dhat"]
 htmd = ["dep:htmd"]
 html2md-rs = ["dep:html2md-rs"]
 html2text = ["dep:html2text"]
