--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 allocation-counter = "0.8.1"
+august = { version = "2.4.0", optional = true }
 boilerpipe = { version = "0.6.0", optional = true }
 comfy-table = "7.1.3"
 htmd = { version = "0.1.6", optional = true }
@@ -20,6 +21,7 @@ url = "2.5.4"
 
 [features]
 default = [
+    "august",
     "boilerpipe",
     "htmd",
     "html2md-rs",
@@ -39,3 +41,4 @@ nanohtml2text = ["dep:nanohtml2text"]
 readability = ["dep:readability"]
 readable-readability = ["dep:readable-readability"]
 boilerpipe = ["dep:boilerpipe"]
+august = ["dep:august"]
