--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ allocation-counter = "0.8.1"
 august = { version = "2.4.0", optional = true }
 boilerpipe = { version = "0.6.0", optional = true }
 comfy-table = "7.1.3"
+fast_html2md = { version = "0.0.41", optional = true, default-features = false, features = [
+    "rewriter",
+] }
 htmd = { version = "0.1.6", optional = true }
 html2md-rs = { version = "0.10.2", optional = true }
 html2text = { version = "0.13.5", optional = true }
@@ -23,6 +26,7 @@ url = "2.5.4"
 default = [
     "august",
     "boilerpipe",
+    "fast_html2md",
     "htmd",
     "html2md-rs",
     "html2text",
@@ -42,3 +46,4 @@ readability = ["dep:readability"]
 readable-readability = ["dep:readable-readability"]
 boilerpipe = ["dep:boilerpipe"]
 august = ["dep:august"]
+fast_html2md = ["dep:fast_html2md"]
