--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ allocation-counter = "0.8.1"
 august = { version = "2.4.0", optional = true }
 boilerpipe = { version = "0.6.0", optional = true }
 comfy-table = "7.1.3"
+dom_smoothie = { version = "0.2.0", optional = true }
 fast_html2md = { version = "0.0.41", optional = true, default-features = false, features = [
     "rewriter",
 ] }
@@ -26,6 +27,7 @@ url = "2.5.4"
 default = [
     "august",
     "boilerpipe",
+    "dom_smoothie",
     "fast_html2md",
     "htmd",
     "html2md-rs",
