Compare the Jina Reader LM via their API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,4 @@ readable-readability = ["dep:readable-readability"]
 boilerpipe = ["dep:boilerpipe"]
 august = ["dep:august"]
 fast_html2md = ["dep:fast_html2md"]
+reader-lm-api = []
