--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ august = { version = "2.4.0", optional = true }
 boilerpipe = { version = "0.6.0", optional = true }
 comfy-table = "7.1.3"
 dom_smoothie = { version = "0.3.0", optional = true }
-fast_html2md = { version = "0.0.41", optional = true, default-features = false, features = [
+fast_html2md = { package = "fast_html2md", version = "0.0.41", optional = true, default-features = false, features = [
     "rewriter",
 ] }
 htmd = { version = "0.1.6", optional = true }
+html2md = { version = "0.2.15", optional = true }
 html2md-rs = { version = "0.10.2", optional = true }
 html2text = { version = "0.13.5", optional = true }
 llm_readability = { version = "0.0.11", optional = true }
@@ -30,6 +31,7 @@ default = [
     "dom_smoothie",
     "fast_html2md",
     "htmd",
+    "html2md",
     "html2md-rs",
     "html2text",
     "llm_readability",
@@ -39,6 +41,7 @@ default = [
     "readable-readability",
 ]
 htmd = ["dep:htmd"]
+html2md = ["dep:html2md"]
 html2md-rs = ["dep:html2md-rs"]
 html2text = ["dep:html2text"]
 llm_readability = ["dep:llm_readability"]
